Fixed "Hi" Safari jump issue

--- a/app/styles/components/_components.intro.scss
+++ b/app/styles/components/_components.intro.scss
@@ -27,31 +27,29 @@
 	}
 }
 
-#anim--h1-hi {
-	//opacity: 1;
-	//transform: translate3d(0, 0, 0);
-	//animation: arrive-hi 1s 1s ease backwards;
-
-
-  //left: 0;
-  opacity: 0;
-  transform: translate3d(-20px, 0, 0);
-  transition: 500ms ease all 1500ms;
-
-  .isLoaded &{
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
+.pin--h1-hi {
+  position: fixed !important; //fixes jumping issue in Safari
 }
 
-//@keyframes arrive-hi {
-//	from {
-//		left: 0;
-//		opacity: 0;
-//		transform: translate3d(-20px, 0, 0);
-//	}
-//	to {
-//		opacity: 1;
-//		transform: translate3d(0, 0, 0);
-//	}
-//}
+#anim--h1-hi {
+  opacity: 1;
+  animation: arrive-hi 1s 1s ease backwards;
+
+  //Todo: add inview & isloaded check
+  //.isLoaded &{
+  //  opacity: 1;
+  //  transform: translate3d(0, 0, 0);
+  //}
+}
+
+@keyframes arrive-hi {
+	from {
+		left: 0;
+		opacity: 0;
+		transform: translate3d(-20px, 0, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
